Add more speaker notes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
               height="400"
             ></canvas>
             <aside class="notes">
-              Vesijää muodostaa kuusikulmaisia kiteitä. Yleisimmät halomuodot
+              Vesijää muodostaa kuusikulmaisia kiteitä. Haloilmiöihin
+              vaikuttavat kiteiden muoto ja asento. Yleisimmät halomuodot
               muodostuvat ns. laatta- ja pylväskiteistä. Pylväskiteet kuin
               lyijykynän palasia. Kiteiden koko noin 0,1 mm.
             </aside>
