Make slides go forward when down is pressed
The USB connected clicker I use sends a down arrow press when forward is
pressed.

--- a/index.html
+++ b/index.html
@@ -463,7 +463,10 @@
           { src: "plugin/markdown/marked.js" },
           { src: "plugin/markdown/markdown.js" },
           { src: "plugin/notes/notes.js", async: true }
-        ]
+        ],
+        keyboard: {
+          40: "next"
+        }
       });
     </script>
     <script src="lib/js/jquery.min.js"></script>
