Link up arrow key to previous slide

--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
           { src: "plugin/notes/notes.js", async: true }
         ],
         keyboard: {
-          40: "next"
+          40: "next",
+          38: "prev",
         }
       });
     </script>
