Add new slide about current status of HaloRay

--- a/index.html
+++ b/index.html
@@ -434,18 +434,30 @@
         </section>
 
         <section>
-          <h2>Tulossa</h2>
-          <ul>
-            <li>Simulaation tallentaminen</li>
-            <li>Pyramidikiteet</li>
-            <li>Muut eksoottiset kidemuodot</li>
-            <li>
-              Analyysiominaisuuksia
-              <ul>
-                <li>Mikä valonkulku aiheutti tämän halon?</li>
-              </ul>
-            </li>
-          </ul>
+          <section>
+            <h2>Ominaisuudet</h2>
+            <ul>
+              <li>Reaaliaikainen säätö</li>
+              <li>Kuusikulmaisten säteiden simulointi</li>
+              <li>Monen kidepopulaation simulointi kerralla</li>
+              <li>Useampi eri kameraprojektio</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Tulossa</h2>
+            <ul>
+              <li>Simulaation tallentaminen</li>
+              <li>Pyramidikiteet</li>
+              <li>Muut eksoottiset kidemuodot</li>
+              <li>
+                Analyysiominaisuuksia
+                <ul>
+                  <li>Mikä valonkulku aiheutti tämän halon?</li>
+                </ul>
+              </li>
+            </ul>
+          </section>
         </section>
       </div>
     </div>
@@ -466,7 +478,7 @@
         ],
         keyboard: {
           40: "next",
-          38: "prev",
+          38: "prev"
         }
       });
     </script>
